--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,7 @@
     /* Slate Gray */
     --color-dustyorange: #8A795D;
     /* Copper */
-    --color-darkgrey: #252525;
+    --color-darkgrey: #2C3539;
 }
 
 
