--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,37 +1,43 @@
-    .fundamentals {
-        height: 100%;
-        background-color: var( --color-darkgrey);
-    }
-    
-    .topbanner {
-        padding: 0;
-        height: 50px;
-        background-color: var(--color-bluegrey);
-        border-bottom: solid 2px;
-        box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
-    }
-    
-    .logodesign {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        margin: auto;
-        width: 300px;
-        height: auto;
-    }
-    
-    .navcontainer {
-        display: flex;
-        justify-content: flex-start;
-        margin-right: 5%;
-    }
-    
-    .navitem {
-        margin: 10px;
-    }
-    
-    .navitem div {
-        color: var(--color-light)
-    }
+        .fundamentals {
+            background-color: var( --color-darkgrey);
+            height: 1400px;
+        }
+        
+        .linkstyle {
+            color: var(--color-dark)
+        }
+        
+        .topbanner {
+            padding: 0;
+            height: 50px;
+            background-color: var(--color-bluegrey);
+            border-bottom: solid 2px;
+            box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+        }
+        
+        .logodesign {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            margin: auto;
+            width: 300px;
+            height: auto;
+        }
+        
+        .navcontainer {
+            display: flex;
+            justify-content: flex-start;
+            margin-right: 5%;
+        }
+        
+        .navitem {
+            margin: 10px;
+        }
+        
+        .navitem div {
+            margin-top: 7px;
+            color: var(--color-dark);
+            font-family: 'Special Elite', 'Courier New', Courier, monospace;
+        }
