--- a/components/AudioPlayer/AudioPlayer.module.css
+++ b/components/AudioPlayer/AudioPlayer.module.css
@@ -1,7 +1,9 @@
 .audioplayer_container {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
-    margin-top: 3rem;
+    margin: 3rem auto;
 }
 
 .audio {
@@ -12,7 +14,6 @@
     background-color: var(--color-dark);
     min-width: 880px;
     max-width: 880px;
-    height: auto;
     box-shadow: 10px 10px 20px 4px rgba(0, 0, 0, 0.2);
 }
 
@@ -47,6 +48,7 @@
 }
 
 .songlist {
+    padding-top: 10px;
     border-top: dotted 1px var(--color-light);
 }
 
