--- a/components/VideoPlayer/videoplayer.module.css
+++ b/components/VideoPlayer/videoplayer.module.css
@@ -55,3 +55,21 @@
     .col {
         padding-right: 2rem;
     }
+    
+    @media only screen and (min-device-width: 200px) and (max-device-width: 844px) and (-webkit-min-device-pixel-ratio: 2) {
+        .videoplayercontainer {
+            margin: 2rem auto;
+        }
+        .video_container {
+            display: block;
+            width: 300px;
+            height: 400px;
+        }
+        .video_left {
+            width: 100%;
+        }
+        .video_right {
+            margin-top: 30px;
+            width: 100%;
+        }
+    }
