--- a/components/AudioPlayer/AudioPlayer.module.css
+++ b/components/AudioPlayer/AudioPlayer.module.css
@@ -19,10 +19,10 @@
 }
 
 .subroutinebomb {
-    margin-top: -9px;
-    width: 250px;
+    margin-top: -6px;
+    width: 220px;
     height: auto;
-    margin-left: 25px;
+    margin-left: 32px;
 }
 
 .songlistcol {
@@ -68,7 +68,7 @@
 
 .playercol {
     order: 2;
-    padding-top: 40px;
+    padding: 35px 20px 0 20px;
     min-width: 330px;
     width: 400px;
     background: var(--color-dark);
@@ -95,10 +95,17 @@
     box-shadow: 5px 5px 5px rgba(218, 145, 0, 0.5);
 }
 
+.playertop {
+    display: inline-flex;
+    width: 100%;
+}
+
 .playerheader {
     display: flex;
     align-items: center;
-    margin-bottom: -10px;
+    margin-bottom: -5px;
+    width: 100%;
+    justify-content: center;
 }
 
 .controlbtns {
@@ -130,13 +137,19 @@
 }
 
 .progressBar progress {
-    min-width: 300px;
+    display: flex;
+    align-items: center;
+    margin-bottom: -5px;
+    width: 100%;
+    justify-content: center;
+    min-width: 280px;
     color: var(--color-uppermiddle);
 }
 
 .ffrewind {
     position: relative;
-    width: 300px;
+    width: 280px;
+    margin: 8px 0 0 5px;
 }
 
 .rewindbtn,
@@ -206,7 +219,7 @@
         width: 280px;
     }
     .controlbtns {
-        margin-top: -2px;
+        margin-top: 4px;
         width: 20px;
         margin-right: 5px;
     }
