--- a/components/AudioPlayer/AudioPlayer.module.css
+++ b/components/AudioPlayer/AudioPlayer.module.css
@@ -112,7 +112,7 @@
 }
 
 .controlbtns {
-    margin-top: 10px;
+    margin-top: 14px;
     color: var(--color-bluegrey);
 }
 
@@ -133,10 +133,10 @@
 }
 
 .displaytext {
-    margin-left: 10px;
     font-size: 30px;
     font-family: 'Moirai One', 'Courier New', Courier, monospace;
     color: var(--color-light);
+    margin-left: -10px;
 }
 
 .progressBar progress {
@@ -213,7 +213,6 @@
         height: 200px;
         margin-left: -20px;
         margin-bottom: 20px;
-        padding-left: 30px;
     }
     .imagecol {
         order: 3;
@@ -222,12 +221,13 @@
         width: 280px;
     }
     .controlbtns {
-        margin-top: 4px;
+        margin-top: 5px;
         width: 20px;
         margin-right: 5px;
     }
+    .playerheader {}
     .displaytext {
-        margin: 0 0 5px 5px;
+        margin-bottom: 5px;
         font-size: 22px;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         font-weight: bold;
