--- a/components/Tooltip/Tooltip.module.css
+++ b/components/Tooltip/Tooltip.module.css
@@ -5,10 +5,11 @@
 
 .tooltipContent {
     visibility: hidden;
-    background-color: var(--color-dustyorange);
-    color: white;
+    background-color: var(--color-lightish);
+    color: var(--color-darkish);
     text-align: center;
     border-radius: 10px;
+    border: var(--color-bluegrey) solid;
     padding: 10px;
     position: fixed;
     /* Make the tooltip fixed */
