--- a/components/VideoPlayer/videoplayer.module.css
+++ b/components/VideoPlayer/videoplayer.module.css
@@ -9,8 +9,8 @@
         .video_container {
             display: flex;
             justify-content: space-between;
-            background-color: var(--color-uppermiddle);
-            border: solid 2px var(--color-dark);
+            background-color: var(--color-darkish);
+            border: solid 2px var(--color-bluegrey);
             border-radius: 8px;
             box-shadow: 8px 8px 8px 3px rgba(0, 0, 0, 0.2);
             padding: 12px 25px 25px 25px;
@@ -30,13 +30,13 @@
         .video_title {
             font-size: 16px;
             font-weight: bold;
-            color: var(--color-light);
+            color: var(--color-lightish);
             margin-bottom: 5px;
         }
         
         .video_text {
             font-size: 12px;
-            color: var(--color-light)
+            color: var(--color-lightish)
         }
         
         .video_img {
