--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,5 +1,5 @@
     .fundamentals {
-        background-color: var( --color-darkgrey);
+        background-color: var( --color-fadedplumb);
         height: 100%;
     }
     
